--- a/app/avatar/spec/page.mdx
+++ b/app/avatar/spec/page.mdx
@@ -58,7 +58,7 @@ The AvatarGroup combines multiple avatars:
   - **Background**: Uses the avatar styling but contains the count
 
 <Component>
-  <Demo.AvatarGroup />
+  <Demo.AvatarGroupDemo />
 </Component>
 
 ### AvatarTrigger
